// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: has no list 1`] = `
<Select
  aria-labelledby="measures-view-selection-label"
  autoBlur={true}
  components={
    Object {
      "Option": [Function],
      "SingleValue": [Function],
    }
  }
  isSearchable={false}
  onChange={[Function]}
  options={
    Array [
      Object {
        "icon": <TreeIcon />,
        "label": "component_measures.tab.tree",
        "value": "tree",
      },
      Object {
        "icon": <TreemapIcon />,
        "label": "component_measures.tab.treemap",
        "value": "treemap",
      },
    ]
  }
/>
`;

exports[`should render correctly: has no tree 1`] = `
<Select
  aria-labelledby="measures-view-selection-label"
  autoBlur={true}
  components={
    Object {
      "Option": [Function],
      "SingleValue": [Function],
    }
  }
  isSearchable={false}
  onChange={[Function]}
  options={
    Array [
      Object {
        "icon": <ListIcon />,
        "label": "component_measures.tab.list",
        "value": "list",
      },
    ]
  }
  value={
    Object {
      "icon": <ListIcon />,
      "label": "component_measures.tab.list",
      "value": "list",
    }
  }
/>
`;

exports[`should render correctly: has no treemap 1`] = `
<Select
  aria-labelledby="measures-view-selection-label"
  autoBlur={true}
  components={
    Object {
      "Option": [Function],
      "SingleValue": [Function],
    }
  }
  isSearchable={false}
  onChange={[Function]}
  options={
    Array [
      Object {
        "icon": <TreeIcon />,
        "label": "component_measures.tab.tree",
        "value": "tree",
      },
      Object {
        "icon": <ListIcon />,
        "label": "component_measures.tab.list",
        "value": "list",
      },
      Object {
        "icon": <TreemapIcon />,
        "label": "component_measures.tab.treemap",
        "value": "treemap",
      },
    ]
  }
  value={
    Object {
      "icon": <ListIcon />,
      "label": "component_measures.tab.list",
      "value": "list",
    }
  }
/>
`;
